--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "Server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node Server/server.js"
+    "start-dev": "nodemon node Server/server.js",
+    "start": "node Server/server.js",
+    "setup":"npm install && npm run start"
   },
   "author": "eliyahu",
   "license": "ISC",
