--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "Server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "setup": "npm install && cd client npm install",
+    "server": "node Server/server.js",
     "start-dev": "nodemon node Server/server.js",
-    "start": "node Server/server.js",
-    "setup": "npm install && npm run start"
+    "client":"cd client && npm run start",
+    "dev": "concurrently --kill-others-on-fails \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm run build"
   },
   "author": "eliyahu",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -20,6 +24,7 @@
     "mongoose": "^6.2.3",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "path": "^0.12.7"
   }
 }
