--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "setup": "npm install && cd client npm install",
     "server": "node Server/server.js",
     "start-dev": "nodemon node Server/server.js",
-    "client":"cd client && npm run start",
+    "client":"cd client && npm run dev",
     "dev": "concurrently --kill-others-on-fails \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install --only=dev && npm run build"
   },
