--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start-dev": "nodemon node Server/server.js",
     "client":"cd client && npm run dev",
     "dev": "concurrently --kill-others-on-fails \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm run build"
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "eliyahu",
   "license": "ISC",
