--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "office-mern-app",
   "main": "Server/server.js",
   "engines": {
-    "node": "6.11.1"
+    "node": "v6.11.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
