--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "setup": "npm install && cd client npm install",
     "server": "node Server/server.js",
     "start-dev": "nodemon node Server/server.js",
-    "client":"cd client && npm run dev",
+    "client": "cd client && npm run dev",
     "dev": "concurrently --kill-others-on-fails \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
@@ -25,6 +25,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
+    "node": "^17.5.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
